force-app/main/default/objects/Contact/fields/Guamanian_or_Chamorro__c.field-meta.xml
<CustomField>
    <fullName>Guamanian_or_Chamorro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guamanian or Chamorro</label>
    <type>Checkbox</type>
</CustomField>