force-app/main/default/objects/Contact/fields/Have_You_Entity_Principal_Forecloser__c.field-meta.xml
<CustomField>
    <fullName>Have_You_Entity_Principal_Forecloser__c</fullName>
    <description>Questionnaire page</description>
    <inlineHelpText>Have you or any other entity of which you were/are a Principal been in foreclosure or default or been
given relief by a lender under the terms of any mortgage loan, contract for deed or the equivalent?</inlineHelpText>
    <label>Have You Entity Principal Forecloser</label>
    <length>3</length>
    <type>Text</type>
</CustomField>