force-app/main/default/objects/Contact/fields/HaveYouBeenConvictFelony_Quest__c.field-meta.xml
<CustomField>
    <fullName>HaveYouBeenConvictFelony_Quest__c</fullName>
    <description>Questionnaire page</description>
    <inlineHelpText>Have you ever been convicted of a felony? If yes, please provide a separate signed
written explanation.</inlineHelpText>
    <label>Have You Been Convicted of a Felony</label>
    <length>3</length>
    <type>Text</type>
</CustomField>