force-app/main/default/objects/Contact/fields/HaveYouIdNationalTreasury_Quest__c.field-meta.xml
<CustomField>
    <fullName>HaveYouIdNationalTreasury_Quest__c</fullName>
    <description>Questionnaire page</description>
    <inlineHelpText>Have you ever been identified, or are you presently identified, on the list of specially designated
nationals and blocked persons subject to financial sanctions that are maintained by the U.S. Treasury
Department Office of Foreign Assets Control?</inlineHelpText>
    <label>Have You Been Identfied by US Treasury</label>
    <length>3</length>
    <type>Text</type>
</CustomField>