force-app/main/default/objects/Contact/fields/HaveYouLostMoneyRentalPropFixFlipInvest__c.field-meta.xml
<CustomField>
    <fullName>HaveYouLostMoneyRentalPropFixFlipInvest__c</fullName>
    <description>Have You Ever Lost Money on a Rental Property or Fix Flip Investment? Yes / No</description>
    <inlineHelpText>Have You Ever Lost Money on a Rental Property or Fix Flip Investment? Yes / No</inlineHelpText>
    <label>HaveYouLostMoneyRentalPropFixFlipInvest?</label>
    <length>3</length>
    <type>Text</type>
</CustomField>