force-app/main/default/objects/Contact/fields/HaveYouPrincipalForeclosuBankr_Quest__c.field-meta.xml
<CustomField>
    <fullName>HaveYouPrincipalForeclosuBankr_Quest__c</fullName>
    <description>Questionnaire page</description>
    <inlineHelpText>Have you or any other entity of which you were/are a Principal been the subject of bankruptcy or
insolvency proceedings? If yes, please provide a separate signed written explanation.</inlineHelpText>
    <label>Have You Principal Subj Bankruptcy</label>
    <length>3</length>
    <type>Text</type>
</CustomField>