force-app/main/default/objects/Contact/fields/HD_Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>HD_Discount_Code__c</fullName>
    <description>A six digit code to provide borrower accounts that have closed a deal with CoreVest</description>
    <formula>Account.Home_Depot__c</formula>
    <inlineHelpText>Home Depot Discount Code</inlineHelpText>
    <label>HD Discount Code</label>
    <type>Text</type>
</CustomField>