force-app/main/default/objects/Contact/fields/Hispanic_or_Latino__c.field-meta.xml
<CustomField>
    <fullName>Hispanic_or_Latino__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hispanic or Latino</label>
    <type>Checkbox</type>
</CustomField>