force-app/main/default/objects/Contact/fields/HOTW_Submission__c.field-meta.xml
<CustomField>
    <fullName>HOTW_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this contact submitted for House of the Week?</description>
    <label>HOTW Submission</label>
    <type>Checkbox</type>
</CustomField>