force-app/main/default/objects/Contact/fields/How_do_you_intend_to_pay_off_this_loan__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_intend_to_pay_off_this_loan__c</fullName>
    <description>Loan Details section. Information delivered from DocuSign</description>
    <label>How do you intend to pay off this loan?</label>
    <length>15</length>
    <type>Text</type>
</CustomField>