force-app/main/default/objects/Contact/fields/How_Do_You_Source_Your_Acquisitions_Mult__c.field-meta.xml
<CustomField>
    <fullName>How_Do_You_Source_Your_Acquisitions_Mult__c</fullName>
    <description>field located in the Bridge Loan docusign form in the sponsor business plan section. The values derive from checkmark selection which are converted into multi-picklist values using docusign custom settings and process builder</description>
    <label>How Do You Source Your Acquisitions?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trustee Sale</fullName>
            </value>
            <value>
                <fullName>Short Sale</fullName>
            </value>
            <value>
                <fullName>MLS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>