force-app/main/default/objects/Contact/fields/HowDidYouSourceYourPortfolioOfRentalProp__c.field-meta.xml
<CustomField>
    <fullName>HowDidYouSourceYourPortfolioOfRentalProp__c</fullName>
    <description>Field is populated from the DocuSign Rental Portfolio Loan Only Sponsor/Borrower Questionnaire</description>
    <label>HowDidYouSourceYourPortfolioOfRentalProp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trustee Sale</fullName>
            </value>
            <value>
                <fullName>Short Sale</fullName>
            </value>
            <value>
                <fullName>MLS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>