force-app/main/default/objects/Contact/fields/HowDoYouDetFairMktValu_SBP__c.field-meta.xml
<CustomField>
    <fullName>HowDoYouDetFairMktValu_SBP__c</fullName>
    <description>SBP = Sponsor Business Plan</description>
    <label>How Do You Det Fair Mkt Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>