force-app/main/default/objects/Contact/fields/HowDoYouEstRenCosts_SBP__c.field-meta.xml
<CustomField>
    <fullName>HowDoYouEstRenCosts_SBP__c</fullName>
    <description>SBP = Sponsor Business Plan</description>
    <label>HowDoYouEstRenCosts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>