force-app/main/default/objects/Contact/fields/HowIntendPayOffRefinance__c.field-meta.xml
<CustomField>
    <fullName>HowIntendPayOffRefinance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HowIntendPayOff Refinance</label>
    <type>Checkbox</type>
</CustomField>