force-app/main/default/objects/Contact/fields/HowIntendPayOffSellProperty__c.field-meta.xml
<CustomField>
    <fullName>HowIntendPayOffSellProperty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HowIntendPayOff Sell Property</label>
    <type>Checkbox</type>
</CustomField>