force-app/main/default/objects/Contact/fields/HowLongDoYouExpectFinance__c.field-meta.xml
<CustomField>
    <fullName>HowLongDoYouExpectFinance__c</fullName>
    <label>HowLongDoYouExpectFinance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>