force-app/main/default/objects/Contact/fields/Howlongdoyouintendtoholdportfolio__c.field-meta.xml
<CustomField>
    <fullName>Howlongdoyouintendtoholdportfolio__c</fullName>
    <description>Values are populated from DocuSign template</description>
    <label>How long do you intend to hold portfolio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>