force-app/main/default/objects/Contact/fields/HowLongInvestingRent_RPTRBP__c.field-meta.xml
<CustomField>
    <fullName>HowLongInvestingRent_RPTRBP__c</fullName>
    <description>RPTRBP = Rental Property Track Record and Business Plan</description>
    <label>HowLongInvestingRent</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>