force-app/main/default/objects/Contact/fields/HowLongisLoanNeeded__c.field-meta.xml
<CustomField>
    <fullName>HowLongisLoanNeeded__c</fullName>
    <label>How Long is Loan Needed?</label>
    <type>TextArea</type>
</CustomField>