force-app/main/default/objects/Contact/fields/HowManyPropertiesLenderPayoff_LR__c.field-meta.xml
<CustomField>
    <fullName>HowManyPropertiesLenderPayoff_LR__c</fullName>
    <description>LR = Loan Request</description>
    <label>How Many Properties Lender Payoff</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>