force-app/main/default/objects/Contact/fields/HowManyRentalProp_RPTRBP__c.field-meta.xml
<CustomField>
    <fullName>HowManyRentalProp_RPTRBP__c</fullName>
    <description>RPTRBP = Rental Property Track Record and Business Plan</description>
    <label>HowManyRentalProp</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>