force-app/main/default/objects/Contact/fields/HowUnderwriteAcquistions_SBP__c.field-meta.xml
<CustomField>
    <fullName>HowUnderwriteAcquistions_SBP__c</fullName>
    <description>SBP = Sponsor Business Plan</description>
    <label>How Do You Underwrite Acquisitions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>