force-app/main/default/objects/Contact/fields/I_Understand_Applying_NonOwner_Inv_Plan__c.field-meta.xml
<CustomField>
    <fullName>I_Understand_Applying_NonOwner_Inv_Plan__c</fullName>
    <description>Loan Details section - I understand that I am applying for a non-owner occupie, business purpose investment loan</description>
    <inlineHelpText>I understand that I am applying for a non-owner occupie, business purpose investment loan</inlineHelpText>
    <label>I Understand Applying NonOwner Inv Plan</label>
    <length>3</length>
    <type>Text</type>
</CustomField>