force-app/main/default/objects/Contact/fields/If_Yes_name_of_the_Title_Co_SBP__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_name_of_the_Title_Co_SBP__c</fullName>
    <description>SBP = Sponsor Business Plan</description>
    <label>If Yes, name of the Title Co</label>
    <length>255</length>
    <type>Text</type>
</CustomField>