force-app/main/default/objects/Contact/fields/If_Yes_Summarize_Scope_of_Rehab_PD__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_Summarize_Scope_of_Rehab_PD__c</fullName>
    <description>PD = Property Details</description>
    <label>If Yes Summarize Scope of Rehab</label>
    <type>TextArea</type>
</CustomField>