force-app/main/default/objects/Contact/fields/IfAcquiredAtTrusteeDoYouReviewTitle__c.field-meta.xml
<CustomField>
    <fullName>IfAcquiredAtTrusteeDoYouReviewTitle__c</fullName>
    <label>IfAcquiredAtTrusteeDoYouReviewTitle?</label>
    <length>3</length>
    <type>Text</type>
</CustomField>