force-app/main/default/objects/Contact/fields/IfAcquiredThroughTrusteeYouObtainInsuran__c.field-meta.xml
<CustomField>
    <fullName>IfAcquiredThroughTrusteeYouObtainInsuran__c</fullName>
    <description>If acquired through a trustee&apos;s sale, do you obtain Title insurance?</description>
    <inlineHelpText>If acquired through a trustee&apos;s sale, do you obtain Title insurance?</inlineHelpText>
    <label>IfAcquiredThroughTrusteeYouObtainInsuran</label>
    <length>3</length>
    <type>Text</type>
</CustomField>