force-app/main/default/objects/Contact/fields/IfSelfManagedHowMnyProps_RPTRBP__c.field-meta.xml
<CustomField>
    <fullName>IfSelfManagedHowMnyProps_RPTRBP__c</fullName>
    <description>RPTRBP = Rental Property Track Record and Business Plan</description>
    <label>IfSelfManagedHowMnyProps</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>