force-app/main/default/objects/Contact/fields/IfSelfManagedYrsExpMng_RPTRBP__c.field-meta.xml
<CustomField>
    <fullName>IfSelfManagedYrsExpMng_RPTRBP__c</fullName>
    <description>RPTRBP = Rental Property Track Record and Business Plan</description>
    <label>IfSelfManagedYrsExpMng</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>