force-app/main/default/objects/Contact/fields/IfSoExplainReasonLoss_RPTRBP__c.field-meta.xml
<CustomField>
    <fullName>IfSoExplainReasonLoss_RPTRBP__c</fullName>
    <description>RPTRBP = Rental Property Track Record and Business Plan</description>
    <label>IfSoExplainReasonLoss</label>
    <type>TextArea</type>
</CustomField>