force-app/main/default/objects/Contact/fields/IfYouPlanToFlipFixCantSell__c.field-meta.xml
<CustomField>
    <fullName>IfYouPlanToFlipFixCantSell__c</fullName>
    <label>IfYouPlanToFlipFixCantSell</label>
    <length>255</length>
    <type>Text</type>
</CustomField>