force-app/main/default/objects/Contact/fields/IfYourPlanIsToPurchaseRentPropExisLender__c.field-meta.xml
<CustomField>
    <fullName>IfYourPlanIsToPurchaseRentPropExisLender__c</fullName>
    <description>If your plan is to purchase rental properties, do you have an existing relationship with a lender for refinancing? Yes / No</description>
    <inlineHelpText>If your plan is to purchase rental properties, do you have an existing relationship with a lender for refinancing? Yes / No</inlineHelpText>
    <label>IfYourPlanIsToPurchaseRentPropExisLender</label>
    <length>3</length>
    <type>Text</type>
</CustomField>