force-app/main/default/objects/Contact/fields/In_Litigation__c.field-meta.xml
<CustomField>
    <fullName>In_Litigation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact is associated to a litigation case</description>
    <inlineHelpText>Please make sure the &quot;In Litigation&quot; field on related contacts are unchecked.</inlineHelpText>
    <label>In Litigation</label>
    <type>Checkbox</type>
</CustomField>