force-app/main/default/objects/Contact/fields/Inbound_Date__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Date__c</fullName>
    <description>Date contact established initial contact with CAF</description>
    <label>Inbound Date</label>
    <type>Date</type>
</CustomField>