force-app/main/default/objects/Contact/fields/InLastFiveYrsPropCited_Quest__c.field-meta.xml
<CustomField>
    <fullName>InLastFiveYrsPropCited_Quest__c</fullName>
    <description>Questionnaire page</description>
    <inlineHelpText>In the last five years, have any of your properties been cited for any violations or investigated by any
regulatory agency? If yes, please provide a separate signed written explanation.</inlineHelpText>
    <label>In Last Five Yrs Prop Cited</label>
    <length>3</length>
    <type>Text</type>
</CustomField>