force-app/main/default/objects/Contact/fields/InStatesCitiesCountiesTarget_SBP__c.field-meta.xml
<CustomField>
    <fullName>InStatesCitiesCountiesTarget_SBP__c</fullName>
    <label>InTheseStatesWhatCitiesCountiesTarget?</label>
    <type>TextArea</type>
</CustomField>