force-app/main/default/objects/Contact/fields/Insurance_AgentBroker_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_AgentBroker_Name__c</fullName>
    <label>Insurance Agent/Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>