force-app/main/default/objects/Contact/fields/Insurance_AgentBroker_Name_SBIABC__c.field-meta.xml
<CustomField>
    <fullName>Insurance_AgentBroker_Name_SBIABC__c</fullName>
    <description>SBIABC = Sponsor/Borrower Insurance Agent/Broker Contact</description>
    <label>Insurance Agent/Broker Name SBIABC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>