force-app/main/default/objects/Contact/fields/Introduction_Source_Text__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Source_Text__c</fullName>
    <label>Introduction Source Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>