force-app/main/default/objects/Contact/fields/InvestmentExperience__c.field-meta.xml
<CustomField>
    <fullName>InvestmentExperience__c</fullName>
    <description>This is the total number of properties or projects the investor has completed.</description>
    <inlineHelpText>This is the total number of properties or projects the investor has completed.</inlineHelpText>
    <label>Investment Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>