force-app/main/default/objects/Contact/fields/Is_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Is_Vendor__c</fullName>
    <formula>Account.RecordType.DeveloperName == &apos;Vendor&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Vendor</label>
    <type>Checkbox</type>
</CustomField>