force-app/main/default/objects/Contact/fields/Japanese__c.field-meta.xml
<CustomField>
    <fullName>Japanese__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Japanese</label>
    <type>Checkbox</type>
</CustomField>