force-app/main/default/objects/Contact/fields/Korean__c.field-meta.xml
<CustomField>
    <fullName>Korean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Korean</label>
    <type>Checkbox</type>
</CustomField>