force-app/main/default/objects/Contact/fields/Last_Activity_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Email_Date__c</fullName>
    <formula>IF( 
AND( 
ISBLANK(LastActivityDate ), 
ISBLANK(ringdna100__Last_Email_Attempt__c), 
ISBLANK(ringdna100__Last_Inbound_Call__c), 
ISBLANK(ringdna100__Last_Outbound_Call__c),
ISBLANK(Last_Mass_Email_Date__c) 
), 
NULL, 
DATE(1900, 01, 01) + 
MAX( 
BLANKVALUE(LastActivityDate , DATE(1900, 01, 01)) - DATE(1900, 01, 01),
BLANKVALUE(Last_Mass_Email_Date__c, DATE(1900, 01, 01)) - DATE(1900, 01, 01),
BLANKVALUE(DATEVALUE(ringdna100__Last_Email_Attempt__c), DATE(1900, 01, 01)) - DATE(1900, 01, 01), 
BLANKVALUE(DATEVALUE(ringdna100__Last_Inbound_Call__c), DATE(1900, 01, 01)) - DATE(1900, 01, 01), 
BLANKVALUE(DATEVALUE(ringdna100__Last_Outbound_Call__c), DATE(1900, 01, 01)) - DATE(1900, 01, 01)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity/Email Date</label>
    <type>Date</type>
</CustomField>