force-app/main/default/objects/Contact/fields/Last_Mass_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Mass_Email_Date__c</fullName>
    <label>Last Mass Email Date</label>
    <type>Date</type>
</CustomField>