force-app/main/default/objects/Contact/fields/Law_Firm_Name_SBAC__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Name_SBAC__c</fullName>
    <description>SBAC = Sponsor / Borrower Attorney Contact</description>
    <label>Law Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>