force-app/main/default/objects/Contact/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Legal Name of the Contact</description>
    <inlineHelpText>Legal Name of this Contact</inlineHelpText>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>