force-app/main/default/objects/Contact/fields/LevelOfRenovationCostForPropertisAcquire__c.field-meta.xml
<CustomField>
    <fullName>LevelOfRenovationCostForPropertisAcquire__c</fullName>
    <description>Field located in Bridge Loan in the Sponsor Business Plan section</description>
    <label>LevelOfRenovationCostForPropertisAcquire</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>