force-app/main/default/objects/Contact/fields/License_No__c.field-meta.xml
<CustomField>
    <fullName>License_No__c</fullName>
    <inlineHelpText>Broker License Number</inlineHelpText>
    <label>License No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>