force-app/main/default/objects/Contact/fields/Limited_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Limited_Partnership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limited Partnership</label>
    <type>Checkbox</type>
</CustomField>