force-app/main/default/objects/Contact/fields/Liquidity__c.field-meta.xml
<CustomField>
    <fullName>Liquidity__c</fullName>
    <label>Liquidity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>