force-app/main/default/objects/Contact/fields/List3rdPartyPropMgtUse_RPTRBP__c.field-meta.xml
<CustomField>
    <fullName>List3rdPartyPropMgtUse_RPTRBP__c</fullName>
    <description>RPTRBP = Rental Property Track Record and Business Plan</description>
    <label>List3rdPartyPropMgtUse</label>
    <type>TextArea</type>
</CustomField>