force-app/main/default/objects/Contact/fields/LLC__c.field-meta.xml
<CustomField>
    <fullName>LLC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LLC</label>
    <type>Checkbox</type>
</CustomField>