force-app/main/default/objects/Contact/fields/Loan_Product__c.field-meta.xml
<CustomField>
    <fullName>Loan_Product__c</fullName>
    <label>Loan Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Term 5 yr</fullName>
            </value>
            <value>
                <fullName>Term 10 yr</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>LOC - Institutional</fullName>
            </value>
            <value>
                <fullName>LOC - Entrepreneurial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>