force-app/main/default/objects/Contact/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <description>DocuSign multi-select checkboxes converted to a multi-select picklist. 
Loan Purpose field located in Bridge Loan form within the Loan Request section.</description>
    <label>Loan Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refinance Debt</fullName>
            </value>
            <value>
                <fullName>Refinance Equity (Cash-out)</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Renovation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>