force-app/main/default/objects/Contact/fields/Loan_Purpose_Check_all_that_apply__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose_Check_all_that_apply__c</fullName>
    <label>Loan Purpose (Check all that apply)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refinance Debt</fullName>
            </value>
            <value>
                <fullName>Refinance Equity (Cash-out)</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Renovation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>