force-app/main/default/objects/Contact/fields/LOMOS_ID__c.field-meta.xml
<CustomField>
    <fullName>LOMOS_ID__c</fullName>
    <externalId>true</externalId>
    <label>LOMOS ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>