force-app/main/default/objects/Contact/fields/Marital_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status_Formula__c</fullName>
    <formula>Text(Marital_Status__c)</formula>
    <label>Marital Status</label>
    <type>Text</type>
</CustomField>