force-app/main/default/objects/Contact/fields/Mobile_Phone_SBAC__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_SBAC__c</fullName>
    <description>SBAC = Sponsor / Borrower Attorney Contact</description>
    <label>Mobile Phone SBAC</label>
    <type>Phone</type>
</CustomField>