force-app/main/default/objects/Contact/fields/Mobile_Phone_SBIABC__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_SBIABC__c</fullName>
    <description>SBIABC = Sponsor/Borrower Insurance Agent/Broker Contact</description>
    <label>Mobile Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>