force-app/main/default/objects/Contact/fields/Native_Hawaiian__c.field-meta.xml
<CustomField>
    <fullName>Native_Hawaiian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Native Hawaiian</label>
    <type>Checkbox</type>
</CustomField>