force-app/main/default/objects/Contact/fields/Native_Hawaiian_Other_Pacific_Islander__c.field-meta.xml
<CustomField>
    <fullName>Native_Hawaiian_Other_Pacific_Islander__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Native Hawaiian/Other Pacific Islander</label>
    <type>Checkbox</type>
</CustomField>