force-app/main/default/objects/Contact/fields/Non_Borrower_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Non_Borrower_Account_Type__c</fullName>
    <formula>TEXT ( Account.Non_Borrower_Account_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Sub-Type</label>
    <type>Text</type>
</CustomField>