force-app/main/default/objects/Contact/fields/Not_Hispanic_or_Latino__c.field-meta.xml
<CustomField>
    <fullName>Not_Hispanic_or_Latino__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Hispanic or Latino</label>
    <type>Checkbox</type>
</CustomField>