force-app/main/default/objects/Contact/fields/NPS_Score2__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score2__c</fullName>
    <description>The goal is to have a score of how well borrower liked CoreVest and rate us when we send a Review Email to a borrower. They will then input a NPS score 0-10 and we will record it in SF. Then we can use Pardot to send Drip system auto emails to specific NPS score email addresses.</description>
    <inlineHelpText>CoreVest rating provided by borrower</inlineHelpText>
    <label>NPS Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>